--- a/src/components/layouts/RootLayout/RootLayout.module.scss
+++ b/src/components/layouts/RootLayout/RootLayout.module.scss
@@ -1,3 +1,5 @@
+@use '@styles/mixins.scss' as mixins;
+
 .page-layout {
   height: 100vh;
   display: flex;
@@ -7,7 +9,5 @@
 .page-content {
   flex: 1;
   overflow: auto;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 32px;
+  @include mixins.text(20px, 400, 32px);
 }
