--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 400;
+  line-height: 32px;
 
   color: #08030e;
   background-color: #ffffff;
