--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -63,3 +63,47 @@
     max-width: 50px;
   }
 }
+
+@media (max-width: 1000px) {
+  .footer-right-content a {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 820px) {
+  .footer {
+    padding: 16px;
+
+    &-content {
+      flex-direction: column-reverse;
+      align-items: flex-start;
+      gap: 16px;
+    }
+
+    &-left-content,
+    &-right-content {
+      width: 100%;
+      gap: 24px;
+    }
+
+    &-left-content {
+      flex-direction: column-reverse;
+    }
+
+    &-right-content {
+      justify-content: center;
+    }
+  }
+
+  .social-media-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .more-links-wrapper {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
