--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -22,3 +22,17 @@
   justify-content: flex-end;
   gap: 16px;
 }
+
+.burger-menu {
+  display: none;
+}
+
+@media (max-width: 820px) {
+  .logo-wrapper {
+    display: none;
+  }
+
+  .burger-menu {
+    display: flex;
+  }
+}
