--- a/src/components/layouts/RootLayout/RootLayout.module.scss
+++ b/src/components/layouts/RootLayout/RootLayout.module.scss
@@ -11,3 +11,9 @@
   overflow: auto;
   @include mixins.text(20px, 400, 32px);
 }
+
+@media (max-width: 820px) {
+  .nav-menu {
+    display: none;
+  }
+}
