--- a/src/components/layouts/RootLayout/RootLayout.module.scss
+++ b/src/components/layouts/RootLayout/RootLayout.module.scss
@@ -6,9 +6,15 @@
   flex-direction: column;
 }
 
+.scrollable-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
 .page-content {
   flex: 1;
-  overflow: auto;
   @include mixins.text(20px, 400, 32px);
 }
 
