--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,6 @@
 .content-wrapper {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 32px 0;
 }
 
 h1 {
@@ -44,10 +43,22 @@ h4 {
   text-transform: uppercase;
 }
 
+.text-capitalize {
+  text-transform: capitalize;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.bold {
+  font-weight: 700;
+}
+
 .link,
 .link__underline {
   color: variables.$gun-powder;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
   cursor: pointer;
 
@@ -58,6 +69,10 @@ h4 {
 
 .link {
   text-decoration: none;
+}
+
+.link__underline {
+  text-decoration: underline;
 }
 
 .gradient {
@@ -93,4 +108,21 @@ h4 {
   height: 90px;
   width: 2px;
   background: linear-gradient(to bottom, variables.$capric, variables.$sagittarius);
+}
+
+@media (max-width: 1000px) {
+  h1 {
+    font-size: 34px !important;
+    line-height: 36px !important;
+  }
+
+  h2 {
+    font-size: 26px !important;
+    line-height: 28px !important;
+  }
+
+  h3 {
+    font-size: 18px !important;
+    line-height: 20px !important;
+  }
 }
