--- a/src/components/HoroscopeDashboard/HoroscopeDashboard.module.scss
+++ b/src/components/HoroscopeDashboard/HoroscopeDashboard.module.scss
@@ -7,5 +7,11 @@
 
 .sign-tile {
   min-width: 0;
-  max-width: 490px;
+  max-width: 460px;
+}
+
+@media (max-width: 1000px) {
+  .sign-overview-list {
+    justify-content: center;
+  }
 }
