--- a/src/styles/color-classes.scss
+++ b/src/styles/color-classes.scss
@@ -19,6 +19,9 @@
 .color-white {
   color: variables.$white;
 }
+.color-red {
+  color: variables.$red;
+}
 .color-gun-powder {
   color: variables.$gun-powder;
 }
