--- a/src/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.module.scss
@@ -1,18 +1,18 @@
 @use '@styles/mixins.scss' as mixins;
 
-.content-wrapper {
+.page-wrapper {
   min-height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  .content {
+  .page-content {
     display: flex;
     gap: 32px;
     padding: 16px;
   }
 
-  img {
+  .not-found-image {
     height: 89px;
   }
 }
@@ -35,16 +35,16 @@ ul {
   }
 }
 
-.first-list li::marker {
+.suggestions li::marker {
   content: url('src/assets/arrow_forward.svg');
 }
 
-.second-list li::marker {
+.recommendations li::marker {
   content: url('src/assets/stars.svg');
 }
 
 @media (max-width: 1000px) {
-  .content-wrapper .content {
+  .page-wrapper .page-content {
     flex-direction: column;
     align-items: center;
   }
